add_executable(test_basis_chebyshev test_basis_chebyshev.cpp)
add_executable(test_basis_cosine test_basis_cosine.cpp)
add_executable(test_basis_exponential test_basis_exponential.cpp)
add_executable(test_basis_inverse_exponential test_basis_inverse_exponential.cpp)
add_executable(test_basis_inverse_log_power test_basis_inverse_log_power.cpp)
add_executable(test_basis_inverse_power test_basis_inverse_power.cpp)
add_executable(test_basis_inverse_sqrt_log_power test_basis_inverse_sqrt_log_power.cpp)
add_executable(test_basis_inverse_sqrt_power test_basis_inverse_sqrt_power.cpp)
add_executable(test_basis_legendre test_basis_legendre.cpp)
add_executable(test_basis_log_power test_basis_log_power.cpp)
add_executable(test_basis_power test_basis_power.cpp)
add_executable(test_basis_sine_cosine test_basis_sine_cosine.cpp)
add_executable(test_basis_sine test_basis_sine.cpp)
add_executable(test_basis_sqrt_log_power test_basis_sqrt_log_power.cpp)
add_executable(test_basis_sqrt_power test_basis_sqrt_power.cpp)

target_link_libraries(test_basis_chebyshev gtest_main fitting_functions_lib)
target_link_libraries(test_basis_cosine gtest_main fitting_functions_lib)
target_link_libraries(test_basis_exponential gtest_main fitting_functions_lib)
target_link_libraries(test_basis_inverse_exponential gtest_main fitting_functions_lib)
target_link_libraries(test_basis_inverse_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_inverse_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_inverse_sqrt_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_inverse_sqrt_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_legendre gtest_main fitting_functions_lib)
target_link_libraries(test_basis_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_sine_cosine gtest_main fitting_functions_lib)
target_link_libraries(test_basis_sine gtest_main fitting_functions_lib)
target_link_libraries(test_basis_sqrt_log_power gtest_main fitting_functions_lib)
target_link_libraries(test_basis_sqrt_power gtest_main fitting_functions_lib)

target_include_directories(test_basis_chebyshev PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_cosine PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_exponential PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_inverse_exponential PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_inverse_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_inverse_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_inverse_sqrt_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_inverse_sqrt_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_legendre PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_sine_cosine PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_sine PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_sqrt_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")
target_include_directories(test_basis_sqrt_power PRIVATE "${CMAKE_SOURCE_DIR}/include/otf/fitting_functions")

# Add a test target
add_test(NAME test_basis_chebyshev COMMAND test_basis_chebyshev)
add_test(NAME test_basis_cosine COMMAND test_basis_cosine)
add_test(NAME test_basis_exponential COMMAND test_basis_exponential)
add_test(NAME test_basis_inverse_exponential COMMAND test_basis_inverse_exponential)
add_test(NAME test_basis_inverse_log_power COMMAND test_basis_inverse_log_power)
add_test(NAME test_basis_inverse_power COMMAND test_basis_inverse_power)
add_test(NAME test_basis_inverse_sqrt_log_power COMMAND test_basis_inverse_sqrt_log_power)
add_test(NAME test_basis_inverse_sqrt_power COMMAND test_basis_inverse_sqrt_power)
add_test(NAME test_basis_legendre COMMAND test_basis_legendre)
add_test(NAME test_basis_log_power COMMAND test_basis_log_power)
add_test(NAME test_basis_power COMMAND test_basis_power)
add_test(NAME test_basis_sine_cosine COMMAND test_basis_sine_cosine)
add_test(NAME test_basis_sine COMMAND test_basis_sine)
add_test(NAME test_basis_sqrt_log_power COMMAND test_basis_sqrt_log_power)
add_test(NAME test_basis_sqrt_power COMMAND test_basis_sqrt_power)