add_executable(test_coeff_chebyshev test_coeff_chebyshev.cpp)
add_executable(test_coeff_cosine test_coeff_cosine.cpp)
add_executable(test_coeff_exponential test_coeff_exponential.cpp)
add_executable(test_coeff_inverse_exponential test_coeff_inverse_exponential.cpp)
add_executable(test_coeff_inverse_log_power test_coeff_inverse_log_power.cpp)
add_executable(test_coeff_inverse_power test_coeff_inverse_power.cpp)
add_executable(test_coeff_inverse_sqrt_log_power test_coeff_inverse_sqrt_log_power.cpp)
add_executable(test_coeff_inverse_sqrt_power test_coeff_inverse_sqrt_power.cpp)
add_executable(test_coeff_legendre test_coeff_legendre.cpp)
add_executable(test_coeff_log_power test_coeff_log_power.cpp)
add_executable(test_coeff_power test_coeff_power.cpp)
add_executable(test_coeff_sine_cosine test_coeff_sine_cosine.cpp)
add_executable(test_coeff_sine test_coeff_sine.cpp)
add_executable(test_coeff_sqrt_log_power test_coeff_sqrt_log_power.cpp)
add_executable(test_coeff_sqrt_power test_coeff_sqrt_power.cpp)

target_link_libraries(test_coeff_chebyshev gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_cosine gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_exponential gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_inverse_exponential gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_inverse_log_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_inverse_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_inverse_sqrt_log_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_inverse_sqrt_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_legendre gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_log_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_sine_cosine gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_sine gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_sqrt_log_power gtest_main fit_evaluation_lib)
target_link_libraries(test_coeff_sqrt_power gtest_main fit_evaluation_lib)

target_include_directories(test_coeff_chebyshev PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_cosine PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_exponential PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_inverse_exponential PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_inverse_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_inverse_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_inverse_sqrt_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_inverse_sqrt_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_legendre PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_sine_cosine PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_sine PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_sqrt_log_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")
target_include_directories(test_coeff_sqrt_power PRIVATE "${CMAKE_SOURCE_DIR}/include/sample/fit_evaluation")

# Add a test target
add_test(NAME test_coeff_chebyshev COMMAND test_coeff_chebyshev)
add_test(NAME test_coeff_cosine COMMAND test_coeff_cosine)
add_test(NAME test_coeff_exponential COMMAND test_coeff_exponential)
add_test(NAME test_coeff_inverse_exponential COMMAND test_coeff_inverse_exponential)
add_test(NAME test_coeff_inverse_log_power COMMAND test_coeff_inverse_log_power)
add_test(NAME test_coeff_inverse_power COMMAND test_coeff_inverse_power)
add_test(NAME test_coeff_inverse_sqrt_log_power COMMAND test_coeff_inverse_sqrt_log_power)
add_test(NAME test_coeff_inverse_sqrt_power COMMAND test_coeff_inverse_sqrt_power)
add_test(NAME test_coeff_legendre COMMAND test_coeff_legendre)
add_test(NAME test_coeff_log_power COMMAND test_coeff_log_power)
add_test(NAME test_coeff_power COMMAND test_coeff_power)
add_test(NAME test_coeff_sine_cosine COMMAND test_coeff_sine_cosine)
add_test(NAME test_coeff_sine COMMAND test_coeff_sine)
add_test(NAME test_coeff_sqrt_log_power COMMAND test_coeff_sqrt_log_power)
add_test(NAME test_coeff_sqrt_power COMMAND test_coeff_sqrt_power)